tests/negative/neg_pr113_nested_tuple.safe
package neg_pr113_nested_tuple
   value : ((boolean, integer), integer) = ((true, 1), 2);

